i18n and add ja locale.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,21 @@
 [egg_info]
 tag_date = true
+
+[extract_messages]
+output_file = wikictxtnav/locale/messages.pot
+keywords =  _ #ngettext:1,2 N_ tag_
+width = 72
+
+[init_catalog]
+input_file = wikictxtnav/locale/messages.pot
+output_dir = wikictxtnav/locale/
+domain = wikictxtnav
+
+[compile_catalog]
+directory = wikictxtnav/locale/
+domain = wikictxtnav
+
+[update_catalog]
+input_file = wikictxtnav/locale/messages.pot
+output_dir = wikictxtnav/locale/
+domain = wikictxtnav
